# CPPyML

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Warnings.cmake
examples/c++/language-model/: README.md  llama-3.2-3b.cpp  smollm2-135m.cpp
examples/c++/linear-regression/housing/: housing-example.cpp
examples/datasets/credit_card_fraud/: csv_split.py
examples/logistic-regression/: h-disease-example.cpp
examples/processing/python/: breast-cancer.py  fraud-detection.py  heart-disease.py  housing.py
examples/python/linear-regression/housing/: housing-example.py
include/: config.h
include/ml_lib/core/: attention-layer.h  embedding-layer.h  layer-norm.h  loss.h  masking.h  metrics.h  neural-network-layer.h  optimizer.h  regularizer.h  rms-norm.h  rotational-pos-encode.h  sin-pos-encode.h  sin-positional-encoding.h  softmax.h  token-sampler.h  tokenizer.h  transformer-block.h  transformer-config.h
include/ml_lib/cuda/: cuda-kernels.h  cuda-matrix.h  gpu-transformer.h
include/ml_lib/math/: matrix.h
include/ml_lib/models/: base-model.h  descision-tree.h  feed-forward.h  gradient-model.h  k-means-clustering.h  k-nearest-neighbors.h  linear-regression.h  logistic-regression.h  model-interface.h  neural-network-ff.h  neural-network-resnet.h  neural-network.h  perceptron.h  random-forest.h  support-vector-machine.h  transformer.h
include/ml_lib/utils/: gguf-loader.h  llama-loader.h
python/: CMakeLists.txt  README.md  bindings.cpp  example.py
source/: main.cpp
source/Helpers/: matrix.cpp
source/core/: attention-layer.cpp  embedding-layer.cpp  layer-norm.cpp  loss.cpp  masking.cpp  metrics.cpp  neural-network-layer.cpp  optimizer.cpp  regularizer.cpp  rms-norm.cpp  rot-pos-encode.cpp  sin-pos-encode.cpp  sin-positional-encoding.cpp  token-sampler.cpp  tokenizer.cpp  transformer-block.cpp
source/cuda/: cuda-kernels.cu  cuda-matrix.cu  gpu-transformer.cu
source/linalg/: matrix.cpp  matrix.h
source/math/: matrix.cpp
source/models/: descision-tree.cpp  feed-forward.cpp  k-means-clustering.cpp  k-nearest-neighbors.cpp  linear-regression.cpp  logistic-regression.cpp  neural-network-ff-resnet.cpp  neural-network-ff.cpp  neural-network.cpp  perceptron.cpp  random-forest.cpp  support-vector-machine.cpp  transformer.cpp
source/utils/: csv_utils.cpp  gguf-loader.cpp  llama-loader.cpp
tests/: CMakeLists.txt
tests/math/: matrix-test.cpp
tests/models/: linear-regression-test.cpp
